--- a/cilium-helm-values.yaml
+++ b/cilium-helm-values.yaml
@@ -1,6 +1,9 @@
 kubeProxyReplacement: true 
 k8sServiceHost: kind-control-plane
 k8sServicePort: 6443
+encryption:
+  enabled: true
+  type: wireguard
 ingressController:
   enabled: true
   default: true
